Fix layout issues
Fix bug in for loop

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -53,11 +53,12 @@ body {
 
 .main {
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 5em auto;
 
     .searchbar {
         background-color: $primary-light;
         width: 70%;
+        max-width: 800px;
         margin: 0 auto 2.2em auto;
         height: 2.6em;
         border-radius: 20px;
@@ -106,11 +107,12 @@ body {
 }
 
 .footer {
+    width: 100%;
+    text-align: center;
     position: fixed;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     padding: 1em;
-    margin-top: 1em;
     background: $primary-dark;
 }
